@@ -1,6 +1,5 @@
 TODO
 ====
-5. Add example for serialize() to doc.
 6.
 
 Applied
@@ -15,4 +14,7 @@ OK [20231118] skim
 OK [20231118] skim
 
 3. Add doc.
+OK [20231118] skim
+
+5. Add example for serialize() to doc.
 OK [20231118] skim
